--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
-    <p>941-761-4670</p>
-    <p>mike@weberdesignad.com</p>
+    <p>123-555-1212</p>
+    <p>mike@email.com</p>
   </head>
   <body>
 
