--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <img src="images/mike.jpg" alt="Mike Profile Photo">
   <h1>Michael Weber</h1>
-  <p><em>Advertising Designer<strong><a href="http://www.website.com">Michael Weber Design</a></strong></em></p>
+  <p><em>Advertising Designer<strong><br>
+    <a href="http://www.website.com">Michael Weber Design</a></strong></em></p>
   <p>I am a designer.</p>
   <hr>
   <h3>Books and Teaching</h3>
